--- a/src/assets/css/bluecollar/parts/footer.scss
+++ b/src/assets/css/bluecollar/parts/footer.scss
@@ -1,27 +1,22 @@
-footer {
-
-}
-
-footer a {
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
 /* Custom stuff */
 /* Override styles in Footer.vue */
 footer {
-  position: fixed !important;
+  position: relative;
   width: 100%;
-  height: 78vh;
-  bottom: 0;
   left: 0;
   box-sizing: border-box;
-  padding: 1rem 2rem;
-  background: rgb(22,22,22);
-  z-index: 0;
+
+  background: #161616;
+  z-index: 1;
+  top: -50vh;
+
+  a {
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
 }
 
 @media screen and (max-width: 40em) {
@@ -36,6 +31,6 @@ footer {
 
 @media screen and (min-width: 102em) {
   footer {
-    padding: 1rem 12rem;
+    padding: 20vh 10rem 0;
   }
 }
