Get text and angle blocks displaying again. Will have to disable and avoid text animation for the time being.

--- a/src/assets/css/bluecollar/components/hero-section.scss
+++ b/src/assets/css/bluecollar/components/hero-section.scss
@@ -24,14 +24,14 @@ section.hero-section {
   }
 }
 
-section.hero-section.text-shadow * {
+.text-shadow * {
   &:not(input):not(select):not(checkbox):not(label):not(textarea) {
     text-shadow: 1px 0 5px rgba(0,0,0,.666);
   }
 }
 
-section.hero-section.text-shadow a.action-link,
-section.hero-section.text-shadow a.action-button {
+.text-shadow a.action-link,
+.text-shadow a.action-button {
   text-shadow: none;
 }
 
