Clean up and re-factor some stylesheets.

--- a/src/assets/css/bluecollar/basscss.scss
+++ b/src/assets/css/bluecollar/basscss.scss
@@ -30,7 +30,7 @@ label {
   vertical-align: middle;
 }
 
-/* Disable form styles, use ampstart */
+/* Disable basscss form styles */
 /*input[type=text],
 input[type=date],
 input[type=datetime],
