--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -1,10 +1,10 @@
 @import './functions';
 @import './bass-override-vars';
-@import './ampstart/ampstart-spacing-vars';
-@import './ampstart/inputs/input-vars';
-@import './ampstart/navbar/navbar-vars';
-@import './ampstart/footer/footer-vars';
-@import './ampstart/dropdown/dropdown-vars';
+@import './spacing-vars';
+@import './input-vars';
+@import './navbar-vars';
+@import './dropdown-vars';
+@import './footer-vars';
 
 // Variables
 //
