--- a/src/assets/css/bluecollar/flex-utils.scss
+++ b/src/assets/css/bluecollar/flex-utils.scss
@@ -322,3 +322,27 @@
   .xl-flex-start { align-items: flex-start }
   .xl-flex-end { align-items: flex-end }
 }
+
+@media (max-width: 40em) {
+  .xs-order-1 {
+    order: 1;
+  }
+
+  .xs-order-2 {
+    order: 2;
+  }
+}
+
+@media (min-width: 40em) {
+  .sm-order-1 {
+    order: 1;
+  }
+
+  .sm-order-2 {
+    order: 2;
+  }
+}
+
+.flip-x {
+  flex-direction: row-reverse;
+}
