--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -441,7 +441,7 @@ section.hero-section.angle + footer {
   }
 
   .hero-first {
-    min-height: 140vh;
+    //min-height: 140vh;
   }
 
   .elite-software:after {
