--- a/src/assets/css/bluecollar/components/video-block-bg.scss
+++ b/src/assets/css/bluecollar/components/video-block-bg.scss
@@ -1,9 +1,6 @@
 .video-block-bg {
-  position: absolute;
-  z-index: 0;
-  width: 100%;
-  height: 102%;
-  object-fit: cover;
+  /* TODO: Maybe there's a good way to enable this on mobile, disable display for now */
+  display: none;
 }
 
  @media screen and (max-width: 40em) {
@@ -12,21 +9,25 @@
   }
 }
 
-/*@media screen and (max-width: 40em){
+@media screen and (min-width: 64em) {
   .video-block-bg {
-    display: none;
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 102%;
+    object-fit: cover;
   }
-}*/
 
-.video-block-bg.overlay::before {
-  content: '.';
-  color: black;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-image: radial-gradient(black 65%, transparent 25%);
+  .video-block-bg.overlay::before {
+    content: '.';
+    color: black;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-image: radial-gradient(black 65%, transparent 25%);
     background-size: 2px 2px;
+  }
 }
 
 /* TODO: Animate rotation */
