--- a/src/assets/css/bluecollar/components/video-block-bg.scss
+++ b/src/assets/css/bluecollar/components/video-block-bg.scss
@@ -3,16 +3,17 @@
   display: none;
 }
 
- @media screen and (max-width: 40em) {
+/*@media screen and (max-width: 40em) {
   .video-block-bg {
     min-height: 100vh;
   }
-}
+}*/
 
 @media screen and (min-width: 64em) {
   .video-block-bg {
+    display: block;
     position: absolute;
-    z-index: 0;
+    z-index: 1;
     width: 100%;
     height: 102%;
     object-fit: cover;
