Reduce opacity of card borders on mobile it's too strong.

--- a/src/assets/css/bluecollar/components/service-detail-card.scss
+++ b/src/assets/css/bluecollar/components/service-detail-card.scss
@@ -20,7 +20,7 @@
 }
 
 .service-detail-card-top {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
   &.fixed-height-mobile {
     min-height: 100vh;
   }
