--- a/src/assets/css/theme-typography.scss
+++ b/src/assets/css/theme-typography.scss
@@ -122,3 +122,9 @@ p {
   line-height:21px;
   color:rgb(255,255,255);
 }
+
+@media screen and (max-width: 40em) {
+  p {
+    font-size: 17px;
+  }
+}
