--- a/src/assets/css/bluecollar/components/actions.scss
+++ b/src/assets/css/bluecollar/components/actions.scss
@@ -30,6 +30,7 @@ a.action-button.transparent:hover {
   padding: 1rem 2rem;
   border: 1px solid #33587a; /* Blue Collar Blue */
   text-decoration: none;
+  cursor: pointer;
 }
 
 .action-link.transparent,
