--- a/src/assets/css/parts/header.scss
+++ b/src/assets/css/parts/header.scss
@@ -40,7 +40,7 @@ header .wrap {
   color: #5B7E9D !important;
 }
 
-#menu li i {
+#menu li i.menu-icon {
   background-color: #5B7E9D !important;
 }
 
@@ -75,7 +75,7 @@ header #menu li {
   margin-left: 20px;
   margin-right: 20px;
   display: flex;
-  i {margin-left: 0.5rem; width: 12px; height: 12px; background-color: var(--cgrey);}
+  i.menu-icon {margin-left: 0.5rem; width: 12px; height: 12px; background-color: var(--cgrey);}
   a {
     color: var(--cgrey);
     cursor: pointer;
@@ -293,10 +293,10 @@ header #hamburger span {
       &:hover {
         color: var(--cwhite) !important;
         background-color: var(--cblue);
-        i {background-color: var(--cwhite);}
+        i.menu-icon {background-color: var(--cwhite);}
       }
     }
-    i {
+    i.menu-icon {
       position: absolute;
       right: 20px;
       top: 50%;
