--- a/src/assets/css/theme-typography.scss
+++ b/src/assets/css/theme-typography.scss
@@ -9,7 +9,7 @@ a:active {
 
 p {
   font-weight:500;
-  font-size:20px;
+  font-size:18px;
   line-height:22px;
   filter:alpha(opacity=100);
   -ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
@@ -133,5 +133,11 @@ p {
     font-weight:700;
     font-size:23px;
     line-height:33px;
+  }
+}
+
+@media screen and (min-width: 84em) {
+  p {
+    font-size: 20px;
   }
 }
