--- a/src/assets/css/parts/footer.scss
+++ b/src/assets/css/parts/footer.scss
@@ -5,8 +5,6 @@ footer {
   width: 100%;
   left: 0;
   box-sizing: border-box;
-
-  background: #161616;
   z-index: 1;
 
   a {
@@ -37,6 +35,6 @@ footer {
 
 @media screen and (min-width: 102em) {
   footer {
-    padding: 20vh 10rem 0;
+    padding: 0 10rem 0;
   }
 }
