--- a/src/assets/css/parts/header.scss
+++ b/src/assets/css/parts/header.scss
@@ -131,7 +131,7 @@ header #hamburger {
 }
 
 
-@media screen and (max-width: 52em) {
+@media screen and (max-width: 64em) {
   /*header {
     position: absolute !important;
   }*/
@@ -149,6 +149,7 @@ header #hamburger {
   }
 
   header .logo-wrapper {
+    width: 100%;
     display: flex;
     height: 48px;
     flex: 1 1 auto;
@@ -236,7 +237,7 @@ header #hamburger span {
   background-color: var(--cgrey);
   opacity: 0.5;
 }
-@media screen and (max-width: 52em) {
+@media screen and (max-width: 64em) {
   body {padding-top: 48px;}
   header .wrap {
     height: 48px;
