--- a/src/assets/css/theme-typography.scss
+++ b/src/assets/css/theme-typography.scss
@@ -123,6 +123,10 @@ p {
   color:rgb(255,255,255);
 }
 
+.title {
+  z-index: 10;
+}
+
 @media screen and (max-width: 40em) {
   p {
     font-size: 17px;
