--- a/src/assets/css/parts/header.scss
+++ b/src/assets/css/parts/header.scss
@@ -50,6 +50,7 @@ header .wrap {
     flex-direction: row;
     flex: 1;
     justify-content: flex-end;
+    align-items: center;
   }
 
   header #menu > ul > li {
@@ -373,4 +374,5 @@ i {
 .site-navbar-top {
   text-transform: uppercase;
   justify-content: flex-end;
+  align-items: center;
 }
